Roman Festchook       roma@polesye.net                  27 Oct 2001
Simon Weijgers        simon@weijgers.com                16 Sep 1998-15 Nov 1999
Simon Wood                                               6 Jan 2000-12 Jan 2000
Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001

-------------------------------------------------------------------------------

Sat Jul 13 06:51:45 BST 2002	Riley Williams <Riley@Williams.Name>

	* Inverted configuration options to be more logical.

	  CONFIG_HW_NO_FLOPPY_DRIVE	=> CONFIG_HW_FLOPPY_DRIVE
	  CONFIG_HW_NO_FPU		=> CONFIG_HW_FPU
	  CONFIG_HW_NO_HARD_DRIVE	=> CONFIG_HW_HARD_DRIVE
	  CONFIG_HW_NO_KEYBOARD_BIOS	=> CONFIG_HW_KEYBOARD_BIOS
	  CONFIG_HW_NO_PS2_MOUSE	=> CONFIG_HW_PS2_MOUSE
	  CONFIG_HW_NO_SEEK_FOR_FLOPPY	=> CONFIG_HW_USE_INT13_FOR_DISKPARMS
	  CONFIG_HW_NO_VGA		=> CONFIG_HW_VGA

	* Verified that current codebase both compiles and boots on my
	  286 based laptop.

Fri Jul 12 19:53:43 BST 2002	Riley Williams <Riley@Williams.Name>

	* This is ELKS 0.1.1-pre3

	* Verified that Paul's patch fixes the problem that prevented
	  ktcp working.
	* Verified that current codebase both compiles and boots on my
	  286 based laptop.

Fri Jul 12 19:32:16 EEST 2002	Paul Nasrat <pauln@truemesh.com>

	* Moved the definition of _rs_ops outside of a block excluded
	  by #ifdef CONFIG_CONSOLE_SERIAL command.

	* KTCP NOW WORKS !!!

Wed Jun 26 04:11:35 BST 2002	Riley Williams <Riley@Williams.Name>

	* Clarified error messages in fs/minix/bitmap.c as some were
	  rather too cryptic.
	* Clarified size reports in arch/i86/tools/build.c to remove
	  unnecessary 'd' suffix to some numbers.
	* Verified that current codebase both compiles and boots on my
	  286 based laptop, with the exception that ktcp still fails.

		*** NOTE - KTCP DOES NOT CURRENTLY WORK ***

Tue Jun 25 15:52:23 EST 2002	Manuel Novoa III <mjn3@codepoet.org>

	* Optimised code in elks/fs/minix/bitmap.c to reduce size.
